--- a/home/home.html
+++ b/home/home.html
@@ -11,6 +11,8 @@
 
 <body>
     <header>
+        <h1 class="logo">Emi's flowers</h1>
+
         <a href="">Home</a>
         <a href="">Price</a>
         <a href="">Catalog</a>
@@ -20,7 +22,20 @@
         <a href="">Logout</a>
     </header>
 
+    <section>
+        <div class="first">
 
+            <img src="../img/free-png.ru-135.png" alt="">
+            <div class="text">
+
+                <p>WE DELIVER FLOWERS AND PRESENTS, MAKING THE PEOPLE YOU CARE ABOUT HAPPY 24H A DAY, 7 DAYS A WEEK.</p>
+                <p>You can now send flowers to Bulgaria easily and quickly thanks to the service, provided by online flowers
+                    delivery shop <b>emi-flowers.com</b>. The whole checkout process lasts not longer than 5 minutes and just a
+                    minimal amount of information, needed for the in-time delivery of your order, is required.</p>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
